--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
+    "build": "node build.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
