--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "framer-motion": "^12.23.19",
     "github-markdown-css": "^5.8.1",
     "globals": "^16.4.0",
